--- a/lab_01/отчёт/01-title.tex
+++ b/lab_01/отчёт/01-title.tex
@@ -22,7 +22,7 @@
 	
 	
 	\begin{center}
-		\Large\textbf{Отчет по лабораторной работе №1\\ по курсу "Анализ алгоритмов"}\newline
+		\Large\textbf{Отчет по лабораторной работе №1\\\hspace{2.25cm} по курсу "Анализ алгоритмов"}\newline
 	\end{center}
 	
 	\noindent\textbf{Тема} $\underline{\text{Расстояние Левенштейна и Дамерау-Левенштейна}}$\newline\newline\newline
