--- a/lab_01/отчёт/03-intro.tex
+++ b/lab_01/отчёт/03-intro.tex
@@ -1,7 +1,10 @@
 % Введение
-\section*{Введение}
+% Центрируем заголовок и делаем его капсом
+\begin{center}
+    \MakeUppercase{\large Введение}
+\end{center}
+\addcontentsline{toc}{section}{Введение} % Добавляем в оглавление
 
-\hspace{1.25cm}
 Цель лабораторной работы: исследовать алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна в матричной, рекурсивно-матричной и рекурсивной реализациях.
 
 \vspace{0.25cm}
