--- a/lab_01/отчёт/13-research.tex
+++ b/lab_01/отчёт/13-research.tex
@@ -2,7 +2,7 @@
 \section{Исследовательская часть}
 
 \hspace{1.25cm}
-Для сравнения времени реализаций алгоритмов Левенштейна и Дамерау-Левенштейна в их матричных, рекурсивных и рекурсивно-матричных реализациях программа была запущена на рандомно сгенерированных строках длинами от 1 до 9 с шагом 2 по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_all} и Рис.~\ref{fig:table_all})
+Для сравнения времени реализаций алгоритмов Левенштейна и Дамерау-Левенштейна в их матричных, рекурсивных и рекурсивно-матричных реализациях программа была запущена на рандомно сгенерированных строках длинами от 1 до 9 с шагом 2 по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (рисунок~\ref{fig:graph_all} и таблица~\ref{table:table_all})
 
 \begin{figure}[H]
     \centering
@@ -11,12 +11,23 @@
     \label{fig:graph_all} % Метка для ссылки на картинку
 \end{figure}
 
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/table_all.png}
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} & \textbf{7} & \textbf{8}\\
+        \hline
+        Левенштейна (матричный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0& 0.0 \\
+        Левенштейна (рекурсивный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0022 & 0.014 & 0.056 \\
+        Левенштейна (рекурс.-мат.) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
+        Дамерау-Левенштейна (матричный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
+        Дамерау-Левенштейна (рекурсивный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0019 & 0.0097 & 0.054 \\
+        Дамерау-Левенштейна (рекурс.-мат.) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
+        \hline
+    \end{tabular}
     \caption{Таблица времени (сек) работы всех алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_all}
-\end{figure}
+    \label{table:table_all}
+\end{table}
 
 \subsection{Сравнение работы матричной, рекурсивной и рекурсивно-матричной реализаций алгоритмов}
 
@@ -26,7 +37,7 @@
 \subsection{Сравнение работы алгоритмов Левенштейна и Дамерау-Левенштейна (отдельно каждый способ)}
 
 \hspace{1.25cm}
-Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их матричных реализациях на большем диапазоне длин рандомно сгенерированных строк (от 25 символов до 125 с шагом 25) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_mat} и Рис.~\ref{fig:table_mat}).
+Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их матричных реализациях на большем диапазоне длин рандомно сгенерированных строк (от 25 символов до 125 с шагом 25) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (рисунок~\ref{fig:graph_mat} и таблица~\ref{table:table_mat}).
 
 \begin{figure}[H]
     \centering
@@ -35,14 +46,21 @@
     \label{fig:graph_mat}
 \end{figure}
 
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/table_mat.png}
+    \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{25} & \textbf{50} & \textbf{75} & \textbf{100} & \textbf{125}\\
+        \hline
+        Левенштейна (матричный) & 0.0 & 0.0 & 0.0 & 0.0013 & 0.0016 \\
+        Дамерау-Левенштейна (матричный) & 0.0 & 0.00031 & 0.0016  & 0.0022 & 0.0028 \\
+        \hline
+    \end{tabular}
     \caption{Таблица времени (сек) работы матричных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_mat}
-\end{figure}
+    \label{table:table_mat}
+\end{table}
 
-Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их рекурсивных реализациях на малом диапазоне длин рандомно сгенерированных строк (от 1 символа до 9 с шагом 2) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_rec} и Рис.~\ref{fig:table_rec}).
+Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их рекурсивных реализациях на малом диапазоне длин рандомно сгенерированных строк (от 1 символа до 9 с шагом 2) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (рисунок~\ref{fig:graph_rec} и таблица~\ref{table:table_rec}).
 
 \begin{figure}[H]
     \centering
@@ -51,14 +69,21 @@
     \label{fig:graph_rec}
 \end{figure}
 
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/table_rec.png}
+    \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{1} & \textbf{3} & \textbf{5} & \textbf{7} & \textbf{9}\\
+        \hline
+        Левенштейна (рекурсивный) & 0.0 & 0.0 & 0.00031 & 0.012 & 0.39 \\
+        Дамерау-Левенштейна (рекурсивный) &  0.0 & 0.0 & 0.0 & 0.034 & 0.66  \\
+        \hline
+    \end{tabular}
     \caption{Таблица времени (сек) работы рекурсивных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_rec}
-\end{figure}
+    \label{table:table_rec}
+\end{table}
 
-Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их рекурсивно-матричных реализациях на большем диапазоне длин рандомно сгенерированных строк (от 25 символа до 125 с шагом 25) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_rec-mat} и Рис.~\ref{fig:table_rec-mat}).
+Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их рекурсивно-матричных реализациях на большем диапазоне длин рандомно сгенерированных строк (от 25 символа до 125 с шагом 25) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (рисунок~\ref{fig:graph_rec-mat} и таблица~\ref{table:table_rec-mat}).
 
 \begin{figure}[H]
     \centering
@@ -67,19 +92,26 @@
     \label{fig:graph_rec-mat}
 \end{figure}
 
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/table_rec-mat.png}
+    \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{25} & \textbf{50} & \textbf{75} & \textbf{100} & \textbf{125}\\
+        \hline
+        Левенштейна (рек-мат) & 0.00063 & 0.0013 & 0.0016 & 0.0041 & 0.0094 \\
+        Дамерау-Левенштейна (рек-мат) & 0.0 & 0.0025 & 0.0028 & 0.0053 & 0.013  \\
+        \hline
+    \end{tabular}
     \caption{Таблица времени (сек) работы рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_rec-mat}
-\end{figure}
+    \label{table:table_rec-mat}
+\end{table}
 
 Видно, что алгоритм Левенштейна оказался немного быстрее алгоритма Дамерау-Левенштейна из-за дополнительной проверки во втором, что компенсируется большим расстоянием в результате первого при наличии перестановок букв в строках.
 
 \subsection{Сравнение работы матричных и рекурсивно-матричных алгоритмов Левенштейна и Дамерау-Левенштейна}
 
 \hspace{1.25cm}
-Так как на общем графике матричный и рекурсивно-матричный алгоритмы были очень близки по скорости, были проведены отдельные замеры (на 5-и точках с длиной строк от 25 до 125 символов с шагом 25 по 50 запусков), среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_mat_rec-mat} и Рис.~\ref{fig:table_mat_rec-mat}).
+Так как на общем графике матричный и рекурсивно-матричный алгоритмы были очень близки по скорости, были проведены отдельные замеры (на 5-и точках с длиной строк от 25 до 125 символов с шагом 25 по 50 запусков), среднее значение было вынесено в таблицу и для наглядности изображено на графике (рисунок~\ref{fig:graph_mat_rec-mat} и таблица~\ref{table:table_mat_rec-mat}).
 
 \begin{figure}[H]
     \centering
@@ -88,12 +120,21 @@
     \label{fig:graph_mat_rec-mat}
 \end{figure}
 
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/table_mat_rec-mat.png}
+    \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{25} & \textbf{50} & \textbf{75} & \textbf{100} & \textbf{125}\\
+        \hline
+        Левенштейна (матричный) & 0.0 & 0.00063 & 0.00094 & 0.00094 & 0.00094 \\
+        Левенштейна (рек-мат) & 0.00031 & 0.0016 & 0.0025 & 0.0069 & 0.011 \\
+        Дамерау-Левенштейна (матричный) & 0.0 & 0.00031 & 0.00094 & 0.0019 & 0.0013 \\
+        Дамерау-Левенштейна (рек-мат) & 0.00031 & 0.0022 & 0.005 & 0.0075 & 0.014 \\
+        \hline
+    \end{tabular}
     \caption{Таблица времени (сек) работы матричных и рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_mat_rec-mat}
-\end{figure}
+    \label{table:table_mat_rec-mat}
+\end{table}
 
 По результатам приведённых графиков видно, что и в алгоритме Левенштейна и Дамерау-Левенштейна рекурсивно-матричный метод работает дольше матричного. Это объясняется затратами на вызов функции при рекурсии и на дополнительные проверки является ли искомое значение уже посчитанным. На небольших длинах строк разница в скорости работы алгоритмов отличается несущественно, однако с увеличением данных растёт и разница во времени.
 
