--- a/lab_01/отчёт/14-conclusion.tex
+++ b/lab_01/отчёт/14-conclusion.tex
@@ -1,7 +1,9 @@
 % Заключение
-\section*{Заключение}
+\begin{center}
+    \MakeUppercase{\large Заключение}
+\end{center}
+\addcontentsline{toc}{section}{Заключение} % Добавляем в оглавление
 
-\hspace{1.25cm}
 В результате выполнения лабораторной работы были исследованы алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна в матричной, рекурсивно-матричной и рекурсивной реализациях.
 
 \vspace{0.25cm}
@@ -19,9 +21,6 @@
 
 \end{itemize}
 
-\subsection*{Вывод}
-
-\hspace{1.25cm}
 В ходе лабораторной работы были рассмотрены, спроетированны и запрограммированы алгоритмы нахождения расстояний Левенштейна и Дамерау-Левенштейна в их матричных, рекурсивных и рекурсивно-матричных реализациях.
 
 Были разработаны тесты для всех алгоритмов, учитывающие крайние случаи, ожидаемых результатов которых достигли все реализации.
