--- a/lab_01/отчёт/main.tex
+++ b/lab_01/отчёт/main.tex
@@ -25,7 +25,7 @@
 % Заключение
 \include{14-conclusion}
 
-% Список литературы
+% Список используемых источников
 \include{20-sources}
 
 \end{document}
