--- a/lab_01/отчёт/20-sources.tex
+++ b/lab_01/отчёт/20-sources.tex
@@ -1,5 +1,12 @@
-% Список литературы
-\renewcommand{\refname}{Список использованных источников}
+% Список использованных источников
+\begin{center}
+    \MakeUppercase{\large Список использованных источников}
+\end{center}
+\addcontentsline{toc}{section}{Список использованных источников} % Добавляем в оглавление
+
+% Удаление "Список литературы" по умолчанию и получившихся пробелов
+\renewcommand{\refname}{}
+\vspace{-11mm}
 
 \begin{thebibliography}{9}
     \bibitem{process_time} Python Documentation. \textit{time.process\_time() - Документация по стандартной библиотеке Python}. Дата обращения: 03 сентября 2024 г. [Электронный ресурс]. Доступно по адресу: \url{https://docs-python.ru/standart-library/modul-time-python/funktsija-process-time-modulja-time/}
