--- a/lab_02/отчёт/01-title.tex
+++ b/lab_02/отчёт/01-title.tex
@@ -22,10 +22,10 @@
 	
 	
 	\begin{center}
-		\Large\textbf{Отчет по лабораторной работе №1\\ по курсу "Анализ алгоритмов"}\newline
+		\Large\textbf{Отчет по лабораторной работе №2\\ по курсу "Анализ алгоритмов"}\newline
 	\end{center}
 	
-	\noindent\textbf{Тема} $\underline{\text{Расстояние Левенштейна и Дамерау-Левенштейна}}$\newline\newline\newline
+	\noindent\textbf{Тема} $\underline{\text{Алгоритмы умножения матриц}}$\newline\newline\newline
 	\noindent\textbf{Студент} $\underline{\text{Талышева О.Н.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
 	\noindent\textbf{Группа} $\underline{\text{ИУ7-55Б~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
 	\noindent\textbf{Преподаватели} $\underline{\text{Волкова Л.Л., Строганов Ю.В.~~~~~~~~~~~}}$\newline
