final check report lab_01

--- a/lab_01/отчёт/00-includes.tex
+++ b/lab_01/отчёт/00-includes.tex
@@ -21,8 +21,9 @@
 
 
 
-% Отключаем добавление библиографии в оглавление
-\usepackage[notbib]{tocbibind}
+% Отключаем добавление библиографии и содержания в оглавление
+\usepackage[notbib,nottoc]{tocbibind}
+
 
 \usepackage{longtable} % Для длинных таблиц, если нужно
 \usepackage{array}     % Для улучшенного контроля над таблицами
