--- a/lab_01/отчёт/12-technologic.tex
+++ b/lab_01/отчёт/12-technologic.tex
@@ -128,8 +128,10 @@ def algo_Damerau_Levenshtein_recursion_matrix(str1: str, str2: str) -> int:
 \vspace{0.25cm}
 \subsection{Тесты}
 
+\hspace{1.25cm}
 Для тестирования алгоритмов Левенштейна и Дамерау-Левенштейна были составлены таблицы с входными данными (2 строки, возможно, пустые - $\lambda$), ожидаемым результатом (расстоянием) и полученным результатом от всех трёх способов.
 
+\vspace{0.25cm}
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|c|c|c|}
